--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -1,81 +1,132 @@
 body {
-    background-color: black;
+    background: rgb(255, 51, 85, .1);
 }
 
+.AppContainer {
+    height: auto;
+}
 
-.Home {
-    width:77% !important;
-    display:flex !important;
-    flex-direction:column !important;
+.app-main-header {
+    display: grid;
+    grid-template-columns: 120px 1fr 120px;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    align-items: center;
+    flex-direction: row;
+    width: 95%;
+    top: 0px;
+    padding: 1rem;
+    z-index: 21;
+    position: relative;
+    font-size: 16px;
+    font-family: 'Inter custom',sans-serif;
+    /* background-image: linear-gradient(transparent 50%, rgb(255, 255, 255) 50%); */
+    background-position: 0px -100%;
+    background-size: 100% 200%;
+}
+
+.app-nav-bar {
+    width: fit-content;
+    display: grid;
+    grid-auto-flow: column;
+    overflow: auto;
+}
+
+.app-ext-links{
+    justify-self: flex-end;
+    margin: 2px;
+    justify-content: space-between;
+    padding: 6px 8px;
+    display: flex;
+}
+
+.app-nav-bar, .app-ext-links {
+    padding: 2px;
+    gap: 10px;
+    border-radius: 16px;
+}
+
+a {
+    border-radius: 14px;
+    font-weight: 500;
     justify-content: center;
-    margin-right: auto;
-    margin-left: auto;
-    color: #f35;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 51, 85, .3);
+    padding: 8px 12px;
+    word-break: break-word;
+    overflow: hidden;
+    white-space: nowrap;
+    cursor: pointer;
+    outline: none;
+    text-decoration: none;
 }
 
-h1 {
+a:hover {
+    background-color: rgb(255, 51, 85, .8);
+}
+
+a:active{
+    font-weight: 600;
+}
+
+.linkToPage {
     width: 100%;
     text-align: center;
-
+    background-color: rgb(68, 51, 238, .2);
 }
 
 
-.Instructions{
-    background-color: rgb(68, 51, 238, .4);
+.Feed {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    padding: 50px;
+    gap: 50px;
+}
+
+
+.PageSnap {
+    padding: 10px;
+    width: 60%;
+    background-color: rgba(232, 226, 227, 0.4);
     border-radius: 8pt !important;
-    padding: 2%;
-    display:flex !important;
-    flex-direction:column !important;
+    flex: auto;
 }
 
-.white-font {
-    color: white;
+.BoxId {
+    background: transparent;
+    font-size: 14px;
 }
 
-.pink-font {
-    color: #f35;
-    margin-right: auto;
+
+
+.Content {
+    background: radial-gradient(
+        farthest-corner at 40px 40px,#f35 0%,rgb(68, 51, 238) 100%) !important;
+    border-radius: 8pt !important;
+    padding: 1rem !important;
+    overflow-wrap: break-word !important;
+    font-size: 16px !important;
+    width: 95% !important;
+    justify-content: center;
+    margin-top: 10px;
     margin-left: auto;
+    margin-right: auto;
 }
+
+.PageFooter {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+
 
 .userName {
     background-color: rgb(68, 51, 238, .8);
     padding: 1%;
     border-radius: 8pt !important;
-}
-
-
-.PageFooter {
-    font-style: italic;
-    float: right;
-    margin-top: 5%;
-    justify-content: center !important;
-    color: white;
-}
-
-.PageSnap {
-    width:66% !important;
-    padding-top: 5%;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 5%;
-    background-color: rgb(41,41,41,.9);
-    border-radius: 8pt !important;
-}
-
-
-.Content {
-    all: revert;
-    width: 80% !important;
-    background: radial-gradient(
-        farthest-corner at 40px 40px,#f35 0%,rgb(68, 51, 238) 100%) !important;
-    border-radius: 8pt !important;
-    padding: 0.5rem !important;
-    overflow-wrap: break-word !important;
-    font-size: 16px !important;
-    --remodmarker:remod-native;
-    margin-right: auto;
-    margin-left: auto;
 }
 
 .CommentRow {
@@ -94,7 +145,7 @@ h1 {
 
 .Comment {
     border-radius: 10pt;
-    min-width: 30%;
+    min-width: 40%;
     overflow: hidden;
     backdrop-filter: blur(10px);
     background-color: rgba(255,255,255,.1);
@@ -116,45 +167,6 @@ h1 {
     font-weight: 400 !important;
 }
 
-.InputArea {
-    font-style: normal !important;
-    display: flex;
-    padding: 0.5rem;
-    background: transparent;
-    border-radius: inherit;
-    border-style: solid;
-    border-width: 0.05em;
-    border-color: #1e1e1e !important;
-}
-
-.InputText{
-    flex-grow: 100;
-    overflow-y: hidden;
-    background: inherit;
-    resize: none;
-    outline: none;
-    border: none;
-    font-family: inherit;
-    font-size: inherit;
-    color: rgb(0, 0, 0) !important;
-    font-weight: 400 !important;
-    height: 28px;
-}
-
-.InputButton{
-    margin-left: auto;
-    background: inherit;
-    border: none;
-    float: bottom right;
-    color: #f35 !important;
-    font-size: inherit;
-    font-weight: bold;
-}
-
-textarea::placeholder {
-    color: #1e1e1e !important;
-    font-weight: 400 !important;
-  }
 
 .Comment, .InputArea {
     margin: 0.5rem;
